// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render correctly with children 1`] = `
<header>
  <nav
    className="sc-eCssSg gDxVol"
  >
    <div
      className="sc-dlfnbm sc-jSgupP kMqpmM jGMqon"
    >
      <div>
        This
      </div>
      <div>
        is
      </div>
      <div>
        cool
      </div>
    </div>
  </nav>
</header>
`;

exports[`Header component should render correctly without children 1`] = `
<header>
  <nav
    className="sc-eCssSg gDxVol"
  >
    <div
      className="sc-dlfnbm sc-jSgupP kMqpmM jGMqon"
    />
  </nav>
</header>
`;
